---------------------------------------------

- v1.0.10943                                -
---------------------------------------------
- 2021-07-18                                -
---------------------------------------------
.: WSM: Task - Send an email to notify once order has been approved by merchant (WSM-397)
.: WSM: Task - Add free delivery confirmation (WSM-418)

- v1.0.10942                                -
---------------------------------------------
- 2021-07-07                                -
---------------------------------------------
.: WSW: Task - FAQ (WSM-391)

- v1.0.10941                                -
---------------------------------------------
- 2021-07-01                                -
---------------------------------------------
.: WSW: Task - Disabled Discount (WSW-125)

---------------------------------------------
- 2021-06-30                                -
---------------------------------------------
.: WSW: BugFix - Profile image is not shown when store has no image in notification (WSW-124)
.: WSW: BugFix - Fix the items display in favorite (WSW-127)
.: WSW: Task - CLONE - Display New Products Category (WSW-126)
.: WSW: Task - Create a copy icon to copy account No when clicking on it (WSW-120)

---------------------------------------------
- 2021-06-29                                -
---------------------------------------------
.: WSW: Task - CLONE - Create a product template which is based on the product template to create the item (WSW-125)

- v1.0.1094                                 -
---------------------------------------------
- 2021-06-20                                -
---------------------------------------------
.: WSW: Task - Update to use long polling to get notification (WSW-123)

---------------------------------------------
- 2021-06-14                                -
---------------------------------------------
.: WSW: Task - Notification of orders (WSW-123)
